--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,9 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
-    "source.fixAll": true,
-    // For ESLint
-    "source.fixAll.eslint": true,
-    // For TSLint
-    "source.fixAll.tslint": true
-    // For Stylelint
-    // "source.fixAll.stylelint": true
+    "source.fixAll": "explicit",
+    "source.fixAll.eslint": "explicit",
+    "source.fixAll.tslint": "explicit"
   },
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
